# latest-user-agent

./: LICENSE  README.rst  ReadMe.md  setup.cfg  setup.py  tox.ini
.github/workflows/: update_ua.yml
data/: top_user_agents.csv
latest_user_agent/: __init__.py
scripts/: generate_user_agents.py
src/lastest_user_agent/: __init__.py  main.py
src/lastest_user_agents/: main.py
