[metadata]
name = latest_user_agent
url = https://github.com/rahulsrma26/latest-user-agent
project_urls =
    Code = https://github.com/rahulsrma26/latest-user-agent
license = LICENSE
platform = any
author = Rahul Sharma
author_email = welcometors@gmail.com
maintainer = rahulsrma26
maintainer_email = welcometors@gmail.com
description = A small package to generate user-agents
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.8
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = src

[bdist_wheel]
universal = 0